@@ -1,0 +1,19 @@
+# Place all the behaviors and hooks related to the matching controller here.
+# All this logic will automatically be available in application.js.
+# You can use CoffeeScript in this file: http://jashkenas.github.com/coffee-script/
+
+jQuery ->
+  $(document)
+    .on('click', '[data-object~="create-new-board"]', () ->
+      $("#create_new_board").val('1')
+      $("#sticky_board_id_container").hide()
+      $("#sticky_board_name_container").show()
+      false
+    )
+    .on('click', '[data-object~="show-existing-boards"]', () ->
+      $("#create_new_board").val('0')
+      $("#sticky_board_name_container").hide()
+      $("#sticky_board_id_container").show()
+      false
+    )
+
