@@ -5,7 +5,15 @@
     <% board_groups = [] %>
     <% board_groups << ["Current", boards.where(archived: false).natural_sort] if boards.where(archived: false).size > 0 %>
     <% board_groups << ["Archived", boards.where(archived: true).natural_sort] if boards.where(archived: true).size > 0 %>
-    <%= select :sticky, :board_id, options_for_select([['Holding Pen', nil]]) + grouped_options_for_select(board_groups, @sticky.board_id) %>
+    <div id="sticky_board_id_container">
+      <%= select :sticky, :board_id, options_for_select([['Holding Pen', nil]]) + grouped_options_for_select(board_groups, @sticky.board_id) %>
+      <%= link_to '+', '#', data: { object: 'create-new-board' }, class: 'btn btn-mini' %>
+    </div>
+    <div id="sticky_board_name_container" style="display:none">
+      <%= hidden_field_tag "create_new_board", 0 %>
+      <%= text_field_tag "sticky_board_name" %>
+      <%= link_to 'cancel', '#', data: { object: 'show-existing-boards' }, class: 'btn btn-mini' %>
+    </div>
   <% else %>
     <%= hidden_field :sticky, :board_id %>
   <% end %>
