@@ -3,7 +3,7 @@
 one:
   project: one
   user: valid
-  name: MyString
+  name: Board One
   description: MyText
   start_date: 2011-03-21
   end_date: 2011-03-28
