@@ -2,6 +2,7 @@
 
 * Enhancements
   * Project show page will now default to displaying the first alphabetically unarchived board by default
+  * New boards can now be created when stickies are created
 
 * Bug Fix
   * User activation emails are no longer sent out when a user's status is changed from pending to inactive
